--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="btn-group">
                 <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                    Menü <span class="caret"></span>
+                    Menu <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
                     ...
