Navbar geändert + logo hinzugefügt

--- a/index.html
+++ b/index.html
@@ -20,21 +20,19 @@
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <div class="btn-group">
-                <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                    Menu test <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    ...
-                </ul>
-            </div>
-            <a class="navbar-brand navbar-right" href="#">
-                <img alt="Brand" src="...">
-            </a>
+    <div class="container-fluid" style="height: 112px; border: 1px;">
+        <div class="btn-group">
+            <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" style="margin: 25% 0%;">
+                Menu test <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                ...
+            </ul>
         </div>
+        <a class="navbar-brand navbar-right" href="#" style="height: 100%;">
+            <img alt="Brand" src="hhnlogo.png" style="height: 100%;">
+        </a>
     </div>
 </nav>
 </body>
