--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid" style="height: 112px; border: 1px;">
+    <div class="container-fluid" style="height: 112px; border: 1px; background: #898a8c;">
         <div class="btn-group">
             <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false" style="margin: 25% 0%;">
