--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="btn-group">
             <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false" style="margin: 25% 0%;">
-                Menu bla <span class="caret"></span>
+                Menu<span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 ...
