--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-
+    <link href="design.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid" style="height: 112px; border: 1px; background: #898a8c;">
+    <div class="container-fluid">
         <div class="btn-group">
-            <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
+            <button class="btn btn-default btn-lg dropdown-toggle hidden-xs" type="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false" style="margin: 25% 0%;">
                 Menu<span class="caret"></span>
             </button>
@@ -30,7 +30,7 @@
                 ...
             </ul>
         </div>
-        <a class="navbar-brand navbar-right" href="#" style="height: 100%;">
+        <a class="navbar-brand navbar-right hidden-xs" href="#" style="height: 100%;">
             <img alt="Brand" src="hhnlogo.png" style="height: 100%;">
         </a>
     </div>
