--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background: #cdcdcd;">
+<html class="index" lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
@@ -22,16 +22,16 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="btn-group">
-            <button class="btn btn-default btn-lg dropdown-toggle hidden-xs" type="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false" style="margin: 25% 0%;">
+            <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                 Menu<span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 ...
             </ul>
         </div>
-        <a class="navbar-brand navbar-right hidden-xs" href="#" style="height: 100%;">
-            <img alt="Brand" src="hhnlogo.png" style="height: 100%;">
+        <a class="navbar-brand navbar-right" href="#">
+            <img class="logo" alt="Brand" src="hhnlogo.png">
         </a>
     </div>
 </nav>
