--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="index" lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <script language="javascript" type="text/javascript" src="File.js"></script>
     <title>Title</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -35,5 +36,10 @@
         </a>
     </div>
 </nav>
+<h3>Google Maps</h3>
+    <div id="map"></div>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">
+    </script>
 </body>
 </html>
