File.js erstellt.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="index" lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <script language="javascript" type="text/javascript" src="File.js"></script>
+    <script language="javascript" type="text/javascript" src="map.js"></script>
     <title>Title</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
