--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 </nav>
 <h3>Google Maps</h3>
-    <div id="map"></div>
+    <div class="map" id="map"></div>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">
     </script>
