--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <link href="design.css" type="text/css" rel="stylesheet" />
+    <link href="design.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -36,9 +36,26 @@
         </a>
     </div>
 </nav>
-    <div class="map" id="map"></div>
-    <script async defer
+<div class="map" id="map"></div>
+<script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">
-    </script>
+</script>
+<div class="standorte">
+    <table id="tabelle" class="center">
+        <tr>Standorte</tr>
+        <tr>
+            <td><a href="...">Campus Heilbronn: Sontheim</a></td>
+        </tr>
+        <tr>
+            <td><a href="...">Campus Heilbronn: Am Europaplatz</a></td>
+        </tr>
+        <tr>
+            <td><a href="...">Campus Künzelsau</a></td>
+        </tr>
+        <tr>
+            <td><a href="...">Campus Schwäbisch Hall</a></td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
