standorte hinzugefügt + verlinkt auf der html seite

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     <table id="tabelle" class="center">
         <tr>Standorte</tr>
         <tr>
-            <td><a href="...">Campus Heilbronn: Sontheim</a></td>
+            <td><a onclick="hhnsontheim()" href="javascript:avoid(0)">Campus Heilbronn: Sontheim</a></td>
         </tr>
         <tr>
-            <td><a href="...">Campus Heilbronn: Am Europaplatz</a></td>
+            <td><a onclick="campus()" href="javascript:void(0)">Campus Heilbronn: Am Europaplatz</a></td>
         </tr>
         <tr>
-            <td><a href="...">Campus Künzelsau</a></td>
+            <td><a onclick="hhnkun()" href="javascript:void(0)">Campus Künzelsau</a></td>
         </tr>
         <tr>
-            <td><a href="...">Campus Schwäbisch Hall</a></td>
+            <td><a onclick="hhnsha()" href="javascript:void(0)">Campus Schwäbisch Hall</a></td>
         </tr>
     </table>
 </div>
