Standort schrift geändert

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </script>
 <div class="standorte">
     <table id="tabelle" class="center">
-        <tr>Standorte</tr>
+        <tr><th>Standorte</th></tr>
         <tr>
             <td><a onclick="hhnsontheim()" href="javascript:avoid(0)">Campus Heilbronn: Sontheim</a></td>
         </tr>
