Bild und Button vertauschen nicht mehr beim verkleinern des Fensters

--- a/index.html
+++ b/index.html
@@ -25,19 +25,26 @@
 <body onresize="rememberCenter()">
 <nav class="navbar navbar-default">
     <div class="container-fluid">
-        <div class="btn-group">
-            <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                <span class="hidden-xs">Menu <span class="caret"></span></span>
-                <span class="glyphicon glyphicon-menu-hamburger visible-xs-block" aria-hidden="true"></span>
-            </button>
-            <ul class="dropdown-menu mydropdown">
-                <li><a href="index.html">Startseite</a></li>
-            </ul>
+        <div class="row">
+            <div class="col-xs-2">
+                <div class="btn-group">
+                    <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                        <span class="hidden-xs">Menu <span class="caret"></span></span>
+                        <span class="glyphicon glyphicon-menu-hamburger visible-xs-block" aria-hidden="true"></span>
+                    </button>
+
+                    <ul class="dropdown-menu mydropdown">
+                        <li><a href="index.html">Startseite</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="test col-xs-10">
+                <a class="navbar-brand navbar-right" href="#">
+                    <img class="logo" alt="Brand" src="hhnlogo.png">
+                </a>
+            </div>
         </div>
-        <a class="navbar-brand navbar-right" href="#">
-            <img class="logo" alt="Brand" src="hhnlogo.png">
-        </a>
     </div>
 </nav>
 <div class="map" id="map"></div>
