--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="design.css" type="text/css" rel="stylesheet"/>
 
 </head>
-<body onresize="rememberCenter()">
+<body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="row">
@@ -48,9 +48,9 @@
     </div>
 </nav>
 <div class="map" id="map"></div>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">
-</script>
+<!--<script async defer-->
+<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">-->
+<!--</script>-->
 <div class="standorte">
     <table id="tabelle" class="center">
         <tr>
@@ -70,5 +70,11 @@
         </tr>
     </table>
 </div>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI"></script>
+<script src="map.js"></script>
 </body>
 </html>
