--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html class="index" lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <script language="javascript" type="text/javascript" src="map.js"></script>
     <title>Title</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -12,12 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
 
     <link href="design.css" type="text/css" rel="stylesheet"/>
 
@@ -48,16 +41,13 @@
     </div>
 </nav>
 <div class="map" id="map"></div>
-<!--<script async defer-->
-<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI&callback=initMap">-->
-<!--</script>-->
 <div class="standorte">
     <table id="tabelle" class="center">
         <tr>
             <th>Standorte</th>
         </tr>
         <tr>
-            <td><a onclick="hhnsontheim()" href="javascript:avoid(0)">Campus Heilbronn: Sontheim</a></td>
+            <td><a onclick="hhnsontheim()" href="javascript:void(0)">Campus Heilbronn: Sontheim</a></td>
         </tr>
         <tr>
             <td><a onclick="campus()" href="javascript:void(0)">Campus Heilbronn: Am Europaplatz</a></td>
