Map auf 50% angegeben

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="test col-xs-10">
                 <a class="navbar-brand navbar-right" href="#">
-                    <img class="logo" alt="Brand" src="hhnlogo.png">
+                    <img alt="Brand" src="hhnlogo.png">
                 </a>
             </div>
         </div>
