media bei den schriftgrößen hinzugefügt

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="test col-xs-10">
-                <a class="navbar-brand navbar-right" href="#">
+                <a class="navbar-brand navbar-right right" href="#">
                     <img alt="Brand" src="hhnlogo.png">
                 </a>
             </div>
