--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!--Marco Vivod, Mert Sürü , Valmir Muhaxheri, Mustafa Ünaldi -->
+
 <!DOCTYPE html>
 <html class="index" lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hochschule Heilbronn Standorte</title>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -11,11 +14,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-
+    <!--- Eigene CSS-Datei mit Anpassungen zu Breakpoints wird geladen --->
     <link href="design.css" type="text/css" rel="stylesheet"/>
 
 </head>
+
 <body>
+
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="row">
@@ -63,8 +68,11 @@
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script
         src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!--Google API -->
 <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATqkQKSoRdQxUYJsJbWCyc9U_ycW0rlMI">
+</script>
+    <!--- Ausführung Javascript(map.js) zur Map-Initialisierung --->
 <script src="map.js"></script>
 </body>
 </html>
